--- a/KINCLE/Tab/MyPage/MyPage.storyboard
+++ b/KINCLE/Tab/MyPage/MyPage.storyboard
@@ -25,7 +25,7 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDq-vR-KOl">
-                                            <rect key="frame" x="160.5" y="84.5" width="93" height="239"/>
+                                            <rect key="frame" x="160.5" y="73.5" width="93" height="261"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pwZ-0v-XU5">
                                                     <rect key="frame" x="-3.5" y="0.0" width="100" height="100"/>
@@ -46,29 +46,29 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="자주가는 암장" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4q-GY-nOV">
+                                                    <rect key="frame" x="0.0" y="171" width="93" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="lHl-9U-iPq">
-                                                    <rect key="frame" x="0.0" y="157" width="93" height="82"/>
+                                                    <rect key="frame" x="0.0" y="199.5" width="93" height="61.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="자주가는 암장" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4q-GY-nOV">
-                                                            <rect key="frame" x="0.0" y="0.0" width="93" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="111111111" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUQ-0e-JL7">
-                                                            <rect key="frame" x="13" y="20.5" width="67.5" height="20.5"/>
+                                                            <rect key="frame" x="13" y="0.0" width="67.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2222222" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qub-mE-pfH">
-                                                            <rect key="frame" x="12" y="41" width="69" height="20.5"/>
+                                                            <rect key="frame" x="12" y="20.5" width="69" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="33333333" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDh-fj-7Wi">
-                                                            <rect key="frame" x="5.5" y="61.5" width="82" height="20.5"/>
+                                                            <rect key="frame" x="5.5" y="41" width="82" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -84,9 +84,12 @@
                                                 <constraint firstItem="4m2-KR-Tr3" firstAttribute="top" secondItem="pwZ-0v-XU5" secondAttribute="bottom" constant="16" id="CuN-jB-NZN"/>
                                                 <constraint firstItem="yDQ-nR-A0b" firstAttribute="top" secondItem="4m2-KR-Tr3" secondAttribute="bottom" id="IcL-2V-ZrJ"/>
                                                 <constraint firstItem="pwZ-0v-XU5" firstAttribute="centerX" secondItem="aDq-vR-KOl" secondAttribute="centerX" id="LEW-BB-pz0"/>
+                                                <constraint firstItem="B4q-GY-nOV" firstAttribute="leading" secondItem="aDq-vR-KOl" secondAttribute="leading" id="PaD-sI-1fR"/>
+                                                <constraint firstItem="B4q-GY-nOV" firstAttribute="top" secondItem="yDQ-nR-A0b" secondAttribute="bottom" constant="14" id="Qs0-qY-fCe"/>
                                                 <constraint firstItem="4m2-KR-Tr3" firstAttribute="centerX" secondItem="aDq-vR-KOl" secondAttribute="centerX" id="UfN-jq-8ta"/>
+                                                <constraint firstAttribute="trailing" secondItem="B4q-GY-nOV" secondAttribute="trailing" id="Uyw-bF-Gnq"/>
                                                 <constraint firstAttribute="bottom" secondItem="lHl-9U-iPq" secondAttribute="bottom" id="XUk-V2-kx3"/>
-                                                <constraint firstItem="lHl-9U-iPq" firstAttribute="top" secondItem="yDQ-nR-A0b" secondAttribute="bottom" id="rqC-ES-pcQ"/>
+                                                <constraint firstItem="lHl-9U-iPq" firstAttribute="top" secondItem="B4q-GY-nOV" secondAttribute="bottom" constant="8" id="kgk-yP-cCT"/>
                                                 <constraint firstItem="lHl-9U-iPq" firstAttribute="centerX" secondItem="aDq-vR-KOl" secondAttribute="centerX" id="uGM-QR-M8G"/>
                                                 <constraint firstItem="yDQ-nR-A0b" firstAttribute="centerX" secondItem="aDq-vR-KOl" secondAttribute="centerX" id="yWC-in-AIh"/>
                                             </constraints>
